--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
+    "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
-    "react-transition-group": "^2.5.0"
+    "react-transition-group": "^2.5.0",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
